--- a/src/webcontent/hello.html
+++ b/src/webcontent/hello.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <!-- head definitions go here -->
+	<link rel="stylesheet" href="../styles/login.css"/>
     </head>
     <body>
         Hello World !!
