carousel on the home page

--- a/src/webcontent/hello.html
+++ b/src/webcontent/hello.html
@@ -3,6 +3,7 @@
     <head>
         <!-- head definitions go here -->
 	<link rel="stylesheet" href="../styles/login.css"/>
+	<link rel="stylesheet" href="../styles/carousel.css"/>
     </head>
     <body>
         Hello World !!
